--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -112,7 +112,12 @@
           husband, dlk has now become a truly happy place for me and i
           have you and all of the beautiful designers that we work with to thank!
         </p>
-        <a class="button button_more" href="#">LEARN MORE</a>
+        @@include('button/index.html', {
+        "text" : "LEARN MORE",
+        "class" : "button button_more",
+        "href" : "#"
+        })
+
       </div>
     </section>
     <section class="sponsors container">
@@ -143,7 +148,11 @@
             there are other days that i am completely shocked that four
             years have flown by. It's simply magical.
           </p>
-          <a class="button button_buy" href="#">buy now</a>
+          @@include('button/index.html', {
+          "text" : "buy now",
+          "class" : "button button_buy",
+          "href" : "#"
+          })
         </div>
       </article>
 
