Убрал не повторяющиеся компоненты

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -75,15 +75,8 @@
       </ul>
       <div class="slid-product ">
         <ul class=" slid-info">
-          @@include('button/index.html', {
-          "text" : "",
-          "class" : "slid-left"
-          })
-          @@include('button/index.html', {
-          "text" : "",
-          "class" : "slid-right"
-          })
-
+          <li><button class="slid-left"></button></li>
+          <li><button class="slid-right"></button></li>
         </ul>
         <p class="text-info marketing-text">
           Modern finds for the modern home. Curated goods by unique designers
