--- a/src/pages/toys/index.html
+++ b/src/pages/toys/index.html
@@ -33,7 +33,7 @@
       <form class="filtr-form" action="https://form-data-dl.herokuapp.com/api/messages" method="POST">
         <fieldset class="fieldset-range">
           <legend class="fieldset-title">Cost</legend>
-          <input class="range" type="range" id="rng" min="0" max="500" value="105" oninput="r()">
+          <input class=" range_js range" type="range" id="rng" min="0" max="500" value="105" oninput=r()>
           <div id="range-bg"></div>
           <div class="range-num">
             <span class="filter-text">0</span>
